--- a/src/App.css
+++ b/src/App.css
@@ -11,27 +11,7 @@
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
 .card {
   padding: 2em;
@@ -68,14 +48,22 @@ a{
   float: left;
 }
 
-header {
+Header {
   background: #fff;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 20%;
+  height: 14%;
   z-index: 999px;
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 
+}
+
+.menuHeader{
+  padding-left: 15%;
+  
 }
