--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,8 @@ Header {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 20%;
+  min-width: 100%;
+  max-height: 20%;
   z-index: 999px;
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
   display: flex;
