--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ Header {
   top: 0;
   left: 0;
   min-width: 100%;
-  max-height: 20%;
+  min-height: 15%;
   z-index: 999px;
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
   display: flex;
@@ -68,16 +68,15 @@ Header {
 .menuHeader{
   padding-left: 15%;
   
+  
 }
 
-.logo{
-  filter: saturate(180%);
-}
+
 
 .card1 {
   margin-top: 15%;
-  width: 25%;
-  height: 30%;
+  width: 100%;
+  height: 80%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -96,12 +95,17 @@ Header {
   
   text-align: center;
   background-color: rgb(0, 161, 155);
-  width: 27%;
-  height: auto;
+  width: 100%;
   font-weight: 900;
   text-decoration: none;
   padding: 10px; 
-
+  color: #eee;
  
 }
 
+.datos{
+  border-bottom-left-radius: 2ch; 
+  border-bottom-right-radius: 2ch; 
+  background-color: gray;
+  width: 100%;
+}
