--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ Header {
 
 
 
-.card1 {
+.card-img {
   margin-top: 15%;
   width: 100%;
   height: 80%;
@@ -106,6 +106,7 @@ Header {
 .datos{
   border-bottom-left-radius: 2ch; 
   border-bottom-right-radius: 2ch; 
-  background-color: gray;
+  background-color: rgb(252, 247, 247);
   width: 100%;
 }
+
